--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -1,5 +1,3 @@
----
----
 /*
 	"About me" theme inspired by Aerial by HTML5 UP
 	html5up.net | @n33co
@@ -24,7 +22,7 @@
 	@keyframes bg { 0% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); } 100% { -moz-transform: translate3d(-300px,0,0); -webkit-transform: translate3d(-300px,0,0); -o-transform: translate3d(-300px,0,0); -ms-transform: translate3d(-300px,0,0); transform: translate3d(-300px,0,0); } }
 
 	#bg {
-		background-size: {{ site.background.size_mobile }} auto;
+		background-size: 980px auto;
 		width: 900px;
 	}
 
