--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
----
----
 /*
 	"About me" theme inspired by Aerial by HTML5 UP
 	html5up.net | @n33co
@@ -11,7 +9,7 @@
 /* Basic */
 
 	body, input, select, textarea {
-		color: {{ site.texts.default_color }};
+		color: #fff;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 15pt;
 		font-weight: 300 !important;
@@ -102,11 +100,8 @@
 		-ms-transform: translate3d(0,0,0);
 		transform: translate3d(0,0,0);
 		/* Set your background with this */
-		{% if  site.background.image %}
-		background: {{ site.background.color }} url("{{ site.url }}/{{ site.background.image }}") bottom left;
-		{% else %}
-		background: {{ site.background.color }};
-		{% endif %}	
+				background: #000 url("/css/images/IMG_20141119_135307.jpg ") bottom left;
+			
 		background-repeat: repeat;
 		height: 100%;
 		left: 0;
@@ -121,7 +116,7 @@
 	@keyframes bg { 0% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); } 100% { -moz-transform: translate3d(-2250px,0,0); -webkit-transform: translate3d(-2250px,0,0); -o-transform: translate3d(-2250px,0,0); -ms-transform: translate3d(-2250px,0,0); transform: translate3d(-2250px,0,0); } }
 
 	#bg {
-		background-size: {{ site.background.size }} auto;
+		background-size: 2250px auto;
 		width: 6750px;
 	}
 
@@ -189,7 +184,7 @@
 			font-weight: 900;
 			letter-spacing: -0.035em;
 			line-height: 1em;
-			color: {{ site.texts.title_color }};
+			color: #fff;
 		}
 
 		#header h2 {
@@ -197,14 +192,14 @@
 			font-weight: 500;
 			letter-spacing: -0.035em;
 			line-height: 1em;
-			color: {{ site.texts.headline_color }};
+			color: #ffa;
 		}
 
 		#header p {
 			font-size: 1.25em;
 			margin: 0.75em 0 0.25em 0;
 			opacity: 0.75;
-			color: {{ site.texts.bio_color }};
+			color: #fff;
 		}
 
 		#header nav {
